Bug 1251783 - Retrieve full header to obtain charset. r=mkmelin